k3s/generated_manifests/matrix/Deployment-matrix.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: matrix
  namespace: matrix
spec:
  replicas: 1
  selector:
    matchLabels:
      app: matrix
  template:
    metadata:
      labels:
        app: matrix
    spec:
      containers:
        - args:
            - --config
            - /etc/conduwuity/conduwuity.toml
          command:
            - /sbin/conduwuit
          image: ghcr.io/continuwuity/continuwuity:v26.8.1
          name: matrix
          ports:
            - containerPort: 6167
              name: http
          resources:
            limits:
              cpu: "1"
              memory: 1Gi
            requests:
              cpu: 100m
              memory: 256Mi
          volumeMounts:
            - mountPath: /data
              name: data
            - mountPath: /etc/conduwuity
              name: config
              readOnly: true
      volumes:
        - configMap:
            name: matrix-config
          name: config
        - name: data
          persistentVolumeClaim:
            claimName: matrix-data
