k3s/generated_manifests/matrix/Service-matrix-tailscale.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/hostname: matrix.doma.lol
    external-dns.alpha.kubernetes.io/target: homelab.boreal-scala.ts.net
  name: matrix-tailscale
  namespace: matrix
spec:
  clusterIP: None
  type: ClusterIP
