k3s/generated_manifests/matrix/Service-matrix.yaml
apiVersion: v1
kind: Service
metadata:
  name: matrix
  namespace: matrix
spec:
  ports:
    - name: http
      port: 80
      targetPort: 6167
  selector:
    app: matrix
  type: ClusterIP
