k3s/generated_manifests/matrix/Ingress-matrix.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: matrix
  namespace: matrix
spec:
  ingressClassName: traefik
  rules:
    - host: matrix.doma.lol
