k3s/generated_manifests/matrix/IngressRoute-matrix-well-known.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: matrix-well-known
  namespace: matrix
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`doma.lol`) && PathPrefix(`/.well-known/matrix`)
      services:
        - name: matrix
          port: 80
