k3s/generated_manifests/matrix/IngressRoute-matrix.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: matrix
  namespace: matrix
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`matrix.doma.lol`)
      services:
        - name: matrix
          port: 80
